--- a/react-website/package.json
+++ b/react-website/package.json
@@ -17,6 +17,7 @@
     "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
