--- a/react-website/public/manifest.json
+++ b/react-website/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Rj Tecnologia",
-  "name": "Rj Tecnologia",
+  "short_name": "React App",
+  "name": "React App",
   "icons": [
     {
       "src": "favicon.ico",
